# to800T

./: README.md  docker-compose.yml
docs/: arquitectura.md  arquitecture.md
frontend/to800T-angular/: README.md  angular.json  package-lock.json  package.json
frontend/to800T-angular/src/: index.html
frontend/to800T-angular/src/app/: app.component.spec.ts  app.component.ts
gateaway/: traefik.md
services/image_processor/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
services/image_processor/alembic/: env.py
services/image_processor/alembic/versions/: 46f40f021406_first_migration.py  7faa9f8471e8_delete_file_path.py
services/image_processor/app/: config.py  database.py  main.py
services/image_processor/app/cinestill_emulation/: 800t-emulation.py  demo.ipynb  demo_raw.ipynb  image_processor.py
services/image_processor/app/cinestill_emulation/dataset/film/: .gitignore
services/image_processor/app/dependencies/: dependecy.py
services/image_processor/app/models/: images.py
services/image_processor/app/repositories/: image_repository.py
services/image_processor/app/routers/: image_router.py
services/image_processor/app/schemas/: image_schema.py
services/image_processor/app/services/: image_service.py  minio_storage_service.py  storage_service.py
services/image_processor/app/utils/: image_utils.py
